# scrapers

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  added_file.py  pyproject.toml
.github/actions/install-env/: action.yml
.github/hooks/: pre-commit
.github/workflows/: codeql.yml  coverage.yml  fbscraper.yml  kavak_scraper.yml  linter.yml  scraper.yml  tests.yml  unit-tests.yml  yapo_scraper.yml  yaposcraper.yml
car-place/: pyproject.toml
car-place/src/car_place/: model.py
car-place/src/car_place/fb-marketplace/: cars-example.json  cars.json  elements.json  fb_sessions.txt  fbcrawler.py  reader.py
car-place/tests/fb_markeplace_tests/: tests.py
src/scrapers/: models.py  utils.py
src/scrapers/fb_mkt/: main.py  test.html  utils.py
src/scrapers/fb_scraper/: fbcrawler.py  model.py
src/scrapers/kavak/: main.py  models.py
src/scrapers/yapo/: main.py
src/scrapers/yapo_scraper/: main.py  model.py  pyproject.toml  schema.py  scrapper.py
tests/: test_example.py
