[project]
name = "car-place"
version = "0.1.0"
description = ""
authors = [
    {name = "Car Place",email = "carplace.2025@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "car_place", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
