[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Leonel Cespedes <leonel.cespedes@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.31.0"
beautifulsoup4 = "^4.13.4"
pandas = "^2.2.3"
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
